--- a/src/app/Works.css
+++ b/src/app/Works.css
@@ -2,7 +2,7 @@
 figure{margin:0}
 .works figure > a{ 
 	display: block; 
-	height: 250px; width: 100%; 
+	height: 200px; width: 100%; 
 	overflow: hidden; 
 	position: relative;
 	border-top: 1px solid var(--themeWhite); padding-top: 1em;
@@ -16,9 +16,9 @@ figure{margin:0}
 	opacity: 0;
 	-ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity = 0);
 	filter: alpha(opacity = 0); }
-.works figure figcaption{ margin-top: 1em; padding: 0 0.5em; white-space: nowrap; }
-.works figure figcaption a{line-height:2em; color: var(--themeDark); font-weight: 700; }
-.works figure figcaption p{ margin: 0; }
+figcaption{ font-size: 0.75em; margin-top: 1em; padding: 0 0.5em; white-space: nowrap; }
+figcaption a{ line-height:2em; color: var(--themeDark); font-weight: 700; }
+figcaption p{ margin: 0; }
 .works-page .works figure { margin-bottom: 3em;}
 /* Work-page (single) */
 .work-page figure {margin-bottom: 3em;}
