--- a/src/app/AppHeader.css
+++ b/src/app/AppHeader.css
@@ -1,12 +1,8 @@
-/* .App-header {
-    height: 150px;
-    text-align: center;
-  } */
-  .App-logo {
+.App-logo {
     animation: spin infinite 15s linear;
     height: 80px;
   }  
-header nav ul { float: left; overflow: hidden; padding: 0 0em 0 0em; border-left: 1px solid var(--themePrimary); line-height: 2em; }
+header nav ul { float: left; overflow: hidden; padding: 1em; border-left: 1px solid var(--themePrimary); line-height: 2em; }
 header, nav {display: block}
 nav a { text-decoration: none; color: var(--themePrimary); }
 .navactive { color: var(--themeWhite); }
