--- a/src/app/AppHeader.css
+++ b/src/app/AppHeader.css
@@ -1,8 +1,9 @@
 .App-logo {
     animation: spin infinite 15s linear;
     height: 80px;
-  }  
-header nav ul { float: left; overflow: hidden; padding: 1em; border-left: 1px solid var(--themePrimary); line-height: 2em; }
+    float: left;
+}
 header, nav {display: block}
+header nav ul { float:right; padding: 1em; line-height: 1.6em; border-left: 1px solid var(--themePrimary);}
 nav a { text-decoration: none; color: var(--themePrimary); }
 .navactive { color: var(--themeWhite); }
